# VRX-64-web

./: .gitignore  Cargo.toml  README.md  build-loading-slide-with-glb.sh  build-wasm.sh  serve-reference-slides.sh
docs/: shared-slide-repo.md
src/: lib.rs  slide_loader.rs
src/app/: mod.rs  web_host.rs
src/assets/: archive.rs  manifest.rs  mod.rs
src/gpu/: mod.rs
src/render/: mod.rs
src/slide/: glb_loader.rs  mod.rs  wire.rs
src/utils/: mod.rs
src/wasm/: mod.rs  runtime.rs
web-preview/: app.js  editor.html  editor.js  index.html  smoke-test.html  style.css  test-glb.html  view.js  vite.config.ts
web-preview/js/: engine_bridge.js  renderer.js  sidecar-worker.js  slide_runtime.js  trace_recorder.js  trace_recorder.test.mjs  wasm-host.js
web-preview/react/: editor.js  index.js  view.js
web-preview/react/chunks/: playlist_repo-sMAodyh6.js
web-preview/src/editor/: EditorApp.tsx  legacy.ts  main.tsx
web-preview/src/index/: PreviewApp.tsx  legacy.ts  main.tsx
web-preview/src/view/: PlayerApp.tsx  legacy.ts  main.tsx
