[package]
name = "VRX-64-web"
version = "0.1.0"
edition = "2024"
description = "Browser host for VZGLYD slide bundles"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vzglyd/VRX-64-web"
rust-version = "1.85"

[lib]
crate-type = ["cdylib", "rlib"]
name = "vzglyd_web"
path = "src/lib.rs"

[profile.release]
lto = true
opt-level = "z"
strip = true

[profile.dev]
debug = 0
incremental = false

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
wasm-logger = "0.2"

web-sys = { version = "0.3", features = [
    "HtmlCanvasElement", "console"
]}

# Kernel
vzglyd_kernel = { package = "VRX-64-kernel", git = "https://github.com/vzglyd/VRX-64-kernel", branch = "main" }
vzglyd_slide = { package = "VRX-64-slide", git = "https://github.com/vzglyd/VRX-64-slide", branch = "main" }
bytemuck = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc", "use-std"] }
glam = "0.29"
gltf = { version = "1", default-features = false, features = ["KHR_lights_punctual", "extras", "names", "utils"] }

[patch."https://github.com/vzglyd/VRX-64-kernel"]
"VRX-64-kernel" = { path = "../VRX-64-kernel" }
